--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "phpmailer/phpmailer": "^6.9",
         "realrashid/sweet-alert": "^7.0"
     },
     "require-dev": {
